# ChangeLog for sys-fs/encfs
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/encfs/ChangeLog,v 1.9 2005/04/16 15:11:59 vanquirius Exp $

  16 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> encfs-1.2.0.2.ebuild:
  Mininum versions in DEPEND, fixes bug 88719. Thanks to Jay Phelps
  <jayphelps@austin.rr.com> for reporting.

  10 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> metadata.xml:
  Maintenance of this package was passed to me by genstef.

*encfs-1.2.0.2 (10 Apr 2005)

  10 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/encfs-1.2.0.2-gcc4.patch, +encfs-1.2.0.2.ebuild:
  Version bump, using gcc-4 patch from Debian.

  03 Apr 2005; Simon Stelling <blubb@gentoo.org> encfs-1.1.11.4.ebuild:
  added ~amd64

*encfs-1.1.11.4 (25 Jan 2005)

  25 Jan 2005; Stefan Schweizer <genstef@gentoo.org> +encfs-1.1.11.4.ebuild:
  Version bump thanks to Daniel Webert <rockoo@gmail.com> in bug 78287

  08 Jan 2005; Sven Wegener <swegener@gentoo.org> encfs-1.1.10.ebuild,
  encfs-1.1.11.ebuild:
  Fixed CVS keyword replacement. Removed DEPEND="${RDEPEND}". Don't install
  COPYING and INSTALL.

*encfs-1.1.11 (05 Jan 2005)

  05 Jan 2005; Stefan Schweizer <genstef@gentoo.org> +encfs-1.1.11.ebuild:
  Version bump, thanks to Andreas Kobara <abusch@gmx.net> for reporting,
  ebuild and extensive testing in bug 76743

  03 Jan 2005; Stefan Schweizer <genstef@gentoo.org> encfs-1.1.10.ebuild:
  It does not work with fuse 2.1, thanks to Jay Phelps
  <jayphelps@austin.rr.com> in bug 73975 for reporting and testing

*encfs-1.1.10 (20 Nov 2004)

  20 Nov 2004; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +encfs-1.1.10.ebuild:
  Adding encfs thanks to Vaclav Slavik <vaclav.slavik@matfyz.cz> and Daniel
  Webert <rockoo@rockoo.homelinux.org> in bug 45070
