@@ -1,11 +1,9 @@
-MD5 c72334cbad7d8150f1f8ad36c924a859 encfs-1.1.11.ebuild 598
 MD5 118827e6a9729d37a38ba68603f01fc9 encfs-1.2.0.2.ebuild 813
-MD5 1d23d6fa67dfe44792bc51aa238dbc9d encfs-1.1.10.ebuild 603
 MD5 23e7e57f9d1c1f6c929befdc8e17fa9c encfs-1.1.11.4.ebuild 714
-MD5 698577d11cedc8597f4b396da7ccab41 ChangeLog 1832
+MD5 6be915fd6a4dc23d369725e8e9a7e8d6 encfs-1.2.1.4.ebuild 739
+MD5 c2cea64fba13ecadd712618000ba519b ChangeLog 2070
 MD5 e55a1d04d676263b4fdae30fc342714e metadata.xml 263
-MD5 714c450406fd70a0a5f8aa7136a6241c files/digest-encfs-1.1.10 63
-MD5 55104922e24cd1b53248abef0fa6b2eb files/digest-encfs-1.1.11 63
 MD5 81e18ccd7de5e43ed4337a4481769cef files/digest-encfs-1.2.0.2 62
+MD5 477bc32465e25fb7a946b7474b605d88 files/digest-encfs-1.2.1.4 62
 MD5 a5b8e38426441a3bc11022890b4d1b8e files/encfs-1.2.0.2-gcc4.patch 1494
 MD5 9fe219918a491e427b9ecec45ffab11c files/digest-encfs-1.1.11.4 63
