@@ -1,6 +1,13 @@
 # ChangeLog for sys-fs/encfs
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/encfs/ChangeLog,v 1.9 2005/04/16 15:11:59 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/encfs/ChangeLog,v 1.10 2005/04/20 16:23:53 vanquirius Exp $
+
+*encfs-1.2.1.4 (20 Apr 2005)
+
+  20 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -encfs-1.1.10.ebuild,
+  -encfs-1.1.11.ebuild, +encfs-1.2.1.4.ebuild:
+  Version bump. Dropping patch since it is now in upstream. Removing old
+  versions.
 
   16 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> encfs-1.2.0.2.ebuild:
   Mininum versions in DEPEND, fixes bug 88719. Thanks to Jay Phelps
